예제코드 수정

--- a/05. 객체 리터럴/presentation5/jaehoo1/예제코드.md
+++ b/05. 객체 리터럴/presentation5/jaehoo1/예제코드.md
@@ -39,6 +39,7 @@ var circle = {
 
 console.log(circle.getDiameter()); // 10
 ```
+## 10.5 프로퍼티 접근
 ```javascript
 var person = {
   name: 'Lee'
@@ -84,6 +85,7 @@ var person = {
 console.log(person[1]);    // -> 10 : person[1] -> person['1']
 console.log(person['1']);  // -> 10
 ```
+## 10.6 프로퍼티 값 갱신
 ```javascript
 var person = {
   name: 'Lee'
